enable dynamic item type retransformation, cleanup