@@ -8,59 +8,6 @@
 	<artifactId>\${artifactId}</artifactId>
 	<version>\${version}</version>
 
-	<profiles>
-	<profile>
-			<id>jdk8</id>
-			<activation>
-				<jdk>1.8</jdk>
-			</activation>
-			<properties>
-				<maven.compiler.source>1.8</maven.compiler.source>
-				<maven.compiler.target>1.8</maven.compiler.target>
-				<java.version>1.8</java.version>
-			</properties>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<excludes>
-								<exclude>**/module-info.java</exclude>
-							</excludes>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>jdk9</id>
-			<activation>
-				<jdk>[1.9,)</jdk>
-			</activation>
-			<properties>
-				<maven.compiler.source>1.9</maven.compiler.source>
-				<maven.compiler.target>1.9</maven.compiler.target>
-				<java.version>1.9</java.version>
-			</properties>
-			<build>
-				<plugins>
-					<!-- COMPILING -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<compilerArgs>
-								<compilerArg>--add-exports</compilerArg>
-								<compilerArg>java.xml/com.sun.xml.internal.bind.v2.ContextFactory=ALL-UNNAMED</compilerArg>
-							</compilerArgs>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
 	<parent>
 		<groupId>io.spot-next</groupId>
 		<artifactId>spot-framework</artifactId>
@@ -70,9 +17,9 @@
 	<properties>
 		<spot.version>\${project.parent.version}</spot.version>
 		<jar.mainclass>${package}.Init</jar.mainclass>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<java.version>1.8</java.version>
+		<maven.compiler.source>10</maven.compiler.source>
+		<maven.compiler.target>10</maven.compiler.target>
+		<java.version>10</java.version>
 	</properties>
 
 	<repositories>
